...
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sort" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/log_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="0"
        android:cacheColorHint="@color/md_theme_dark_inverseSurface"
        android:foregroundTint="@color/tertiary_background"
...





    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        android:visibility="visible"
...
