<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/tertiary_background"
    tools:context=".Activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp"
                android:background="@drawable/custom_edittext">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/signup_email"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="40dp"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:hint="Email"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/white"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/signup_password"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:hint="Password"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/white"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/confirm_signup_password"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:hint=" Confirm Password"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/white"
                    android:imeOptions="actionDone"/>

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/primary_bronze"
                    android:text="Sign Up"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginRedirectText"
                    android:text="Already registered? Login"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>