...
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <Button
        android:id="@+id/logout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary_bronze"
        android:padding="12dp"
        android:text="Log Out"
...
